[tool.poetry]
name = "anime-recommender"
version = "0.1.0"
description = ""
authors = ["AlimU <alim.uzhbanokov@gmail.com>"]
readme = "README.md"
packages = [{include = "anime_recommender"}]

[tool.poetry.dependencies]
python = "^3.10"
dash = ">=2.10.0"
dash-bootstrap-components = ">=1.4.1"
loguru = ">=0.7.0"
multipledispatch = ">=1.0.0"
numpy = ">=1.23.5"
pandas = ">=2.0.0"
plotly = ">=5.14.1"
pyyaml = ">=6.0"
requests = ">=2.28.1"
scikit-learn = ">=1.2.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pre-commit-hooks = "^4.4.0"
add-trailing-comma = "^3.0.1"
git-ignore = "^1.0.2"
black = "^23.7.0"
isort = "^5.12.0"
autoflake = "^2.2.0"
unify = "^0.5"
wemake-python-styleguide = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
